# SUAD

./: .gitignore  README.md
.github/workflows/: jlc_fab_files.yml
doc/: Button_Flowchart.drawio  maze.numbers
firmware/: CMakeLists.txt  README.md  SUAD.config  SUAD.files  SUAD.includes  pack_msc_files.py  pico_sdk_import.cmake
firmware/src/: core1.c  core1.h  main.c  modules.c  modules.h  msc_disk.c  non_blocking_timer.c  non_blocking_timer.h  usb_descriptors.c
firmware/src/lib/: non_blocking_timer.c  non_blocking_timer.h
firmware/src/modules/: animations.c  module_1.c  module_2.c  module_3.c  module_4.c  module_5.c  modules.c  modules.h
firmware/src/usb/: content.h  content.template  content.txt  content_large.h  content_minimal.h  convert.py  msc_disk.c  tusb_config.h  usb_descriptors.c
pcb/: LCSC_parts.kicad_sym  Padauk.kicad_sym  SUAD.kicad_pcb  SUAD.kicad_pro  SUAD.kicad_sch  SUAD_layout.kicad_pcb  SUAD_layout.kicad_pro  buttons.kicad_sch  fp-lib-table  jlcpcb_fab_files.kibot.yaml  leds.kicad_sch  sym-lib-table
pcb/LCSC_parts.pretty/: LED_WS2812B-Mini_3.5x3.5mm.kicad_mod  RK10J11R001Y.kicad_mod  TS-1187A-B-A-B.kicad_mod
pcb/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
